--- a/.github/workflows/build_dashboard.yml
+++ b/.github/workflows/build_dashboard.yml
@@ -61,6 +61,6 @@ jobs:
                 docker kill $container_ids
               fi
   
-              az acr login --name ${{ env.CONTAINER_REGISTRY }}
+              docker login ${{ env.CONTAINER_REGISTRY }}.azurecr.io
               docker pull $CONTAINER_REGISTRY.azurecr.io/$IMAGE_NAME:latest
-              docker run -d --restart unless-stopped --env-file .env $CONTAINER_REGISTRY.azurecr.io/$IMAGE_NAME:latest
+              docker run -d --restart unless-stopped --env-file .env -p 8050:8050 $CONTAINER_REGISTRY.azurecr.io/$IMAGE_NAME:latest
