--- a/.github/workflows/deploy_expenses_aws.yml
+++ b/.github/workflows/deploy_expenses_aws.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.ACCESS_KEY_AWS }}
           aws-secret-access-key: ${{ secrets.SECRET_KEY_AWS }}
-          aws-region: ap-south-1
+          aws-region: us-east-1
 
       - name: Tag Docker image
         run: |
