--- a/.github/workflows/deploy_expenses_aws.yml
+++ b/.github/workflows/deploy_expenses_aws.yml
@@ -31,6 +31,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.SECRET_KEY_AWS }}
           aws-region: us-east-1
 
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
       - name: Tag Docker image
         run: |
           docker tag ${{ env.IMAGE_NAME }} ${{ env.CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
