Change the API URL

--- a/.github/workflows/build_labeling.yml
+++ b/.github/workflows/build_labeling.yml
@@ -3,7 +3,7 @@ name: Build and Push API for labeling
 on:
   push:
     branches:
-      - deploy-labeling
+      - deploy-labels
 
 jobs:
   build-and-push:
