--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ labels/augment_data.ipynb
 labels/expenses_labeled_full.csv
 labels/get_initial_embeddings.ipynb
 labels/labeling_all_trxs.ipynb
+dashboard-env/
