Change the triggers for all the workflows

--- a/.github/workflows/build_dashboard.yml
+++ b/.github/workflows/build_dashboard.yml
@@ -1,9 +1,11 @@
-name: Build and Push API for base expenses
+name: Build and Push the dashboard app to the Azure Virtual Machine
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'dashboard/**'
 
 jobs:
   build-and-push:
